2021-05-05  Youenn Fablet  <youenn@apple.com>

        No need to error a fetch body stream if its request or response is stopped
        https://bugs.webkit.org/show_bug.cgi?id=225347

        Reviewed by Geoffrey Garen.

        * http/wpt/fetch/fetch-response-body-stop-in-worker-expected.txt: Added.
        * http/wpt/fetch/fetch-response-body-stop-in-worker.html: Added.

2021-05-05  Sam Weinig  <weinig@apple.com>

        Add preliminary support for specifying a color space for 2D canvas
        https://bugs.webkit.org/show_bug.cgi?id=225286

        Reviewed by Dean Jackson.

        Add basic tests for color space in canvas support.

        * fast/canvas/CanvasRenderingContext2DSettings-colorSpace-disabled-expected.txt: Added.
        * fast/canvas/CanvasRenderingContext2DSettings-colorSpace-disabled.html: Added.
        * fast/canvas/CanvasRenderingContext2DSettings-colorSpace-enabled-expected.txt: Added.
        * fast/canvas/CanvasRenderingContext2DSettings-colorSpace-enabled.html: Added.
        * fast/canvas/canvas-color-space-display-p3-expected.html: Added.
        * fast/canvas/canvas-color-space-display-p3.html: Added.

2021-05-05  Chris Lord  <clord@igalia.com>

        Update WPT OffscreenCanvas tests to respect [EnforceRange]
        https://bugs.webkit.org/show_bug.cgi?id=225391

        Reviewed by Darin Adler.

        WPT html/canvas/offscreen/pixel-manipulation/2d.imageData.get.tiny.html
        passes after updating.

        * platform/glib/TestExpectations:

2021-05-05  Jean-Yves Avenard  <jya@apple.com>

        imported/w3c/web-platform-tests/media-source/mediasource-activesourcebuffers.html is a flakey
        https://bugs.webkit.org/show_bug.cgi?id=225386
        rdar://74704447

        Reviewed by Eric Carlson.

        * platform/mac-wk2/TestExpectations: Remove

2021-05-04  Tyler Wilcock  <twilco.o@protonmail.com>

        Import webstorage WPTs
        https://bugs.webkit.org/show_bug.cgi?id=225369
