@@ -25,13 +25,13 @@
   <body>
 
     <div class="group">
-      <img id="hest" src="resources/delayedCircle.php" type="image/svg+xml">
-      <img src="resources/delayedCircle.php" type="image/svg+xml">
-      <img src="resources/delayedCircle.php" type="image/svg+xml">
-      <img src="resources/delayedCircle.php" type="image/svg+xml">
-      <img src="resources/delayedCircle.php" type="image/svg+xml">
-      <img src="resources/delayedCircle.php" type="image/svg+xml">
-      <img src="resources/delayedCircle.php" type="image/svg+xml">
+      <img id="hest" src="resources/delayedCircle.py" type="image/svg+xml">
+      <img src="resources/delayedCircle.py" type="image/svg+xml">
+      <img src="resources/delayedCircle.py" type="image/svg+xml">
+      <img src="resources/delayedCircle.py" type="image/svg+xml">
+      <img src="resources/delayedCircle.py" type="image/svg+xml">
+      <img src="resources/delayedCircle.py" type="image/svg+xml">
+      <img src="resources/delayedCircle.py" type="image/svg+xml">
     </div>
 
     <script>
